# tomato_robot_ws

./: .gitignore  requirements.txt
src/tomato_bringup/: package.xml  setup.cfg  setup.py
src/tomato_bringup/launch/: backprojection_test.launch.py  robot.launch.py  stereo.launch.py  teleop.launch.py  transform_test.launch.py
src/tomato_camera/: README.md  package.xml  setup.cfg  setup.py
src/tomato_camera/config/: disparity.yaml  sgbm_working.yaml
src/tomato_camera/launch/: stereo.launch.py
src/tomato_camera/scripts/: select_best_stereo_acircles.py
src/tomato_control/: package.xml  setup.cfg  setup.py
src/tomato_description/: CMakeLists.txt  package.xml
src/tomato_description/meshes/: base_link.stl  (+7 more)
src/tomato_interfaces/: CMakeLists.txt  package.xml
src/tomato_interfaces/msg/: TomatoDetection.msg  TomatoDetectionArray.msg  TomatoRipeness.msg  TomatoRipenessArray.msg  TorqueState.msg
src/tomato_interfaces/srv/: DebugTomato.srv  SelectTomato.srv  SetTorque.srv
src/tomato_motor_control/: README.md  package.xml  setup.cfg  setup.py
src/tomato_motor_control/config/: motors.yaml
src/tomato_motor_control/launch/: motor.launch.py
src/tomato_motor_control/scripts/: calibrate_motor.py  change_motor_id.py  command_zero.py  find_motor_ids.py  jog_motor.py  move_motor.py  read_motors.py  set_operating_mode.py
src/tomato_motor_control/tomato_motor_control/: constants.py  motor_node.py
src/tomato_perception/: package.xml  setup.py
src/tomato_teleop/: package.xml  setup.cfg  setup.py
src/tomato_trajectory/: README.md  package.xml  setup.cfg  setup.py
(+45 files in other folders)
