<?xml version="1.0"?>
<package format="3">
  <name>tomato_motor_control</name>
  <version>0.0.1</version>

  <description>Motor control for tomato harvesting robot</description>

  <maintainer email="ann.song@yale.edu">Ann Song</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depends>std_srvs</depends>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>